--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "scripts": {
     "openapi:generate": "npx openapi-typescript ./resources/openapi-v1.yaml -o ./src/gen/v1.ts",
+    "dev": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.6.1",
     "openapi-typescript": "^7.4.1",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
   }
 }
