--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "openapi-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "A demo application that showcases the use of OpenAPI and Express",
   "main": "index.js",
   "scripts": {
-    "openapi:generate": "npx openapi-typescript ./resources/openapi-v1.yaml -o ./src/gen/v1.ts",
-    "dev": "ts-node ./src/index.ts",
+    "openapi:generate": "npx openapi-typescript ./openapi/v1.yaml -o ./src/generated/v1.ts",
+    "dev": "ts-node ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Bryan Borgeson",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.6.1",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@blgc/openapi-router": "^0.0.20",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "valibot": "^0.42.1",
     "validation-adapters": "^0.0.11"
