--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Bryan Borgeson",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.6.1",
     "openapi-typescript": "^7.4.1",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@blgc/openapi-router": "^0.0.20",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "valibot": "^0.42.1",
