--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.6.1",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "openapi-typescript": "^7.4.1",
     "ts-node": "^10.9.2"
   },
@@ -22,7 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "swagger-ui-express": "^5.0.1",
     "valibot": "^0.42.1",
-    "validation-adapters": "^0.0.11"
+    "validation-adapters": "^0.0.11",
+    "yamljs": "^0.3.0"
   }
 }
