--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@blgc/openapi-router": "^0.0.20",
+    "@types/mongodb": "^4.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongodb": "^6.9.0",
     "swagger-ui-express": "^5.0.1",
     "valibot": "^0.42.1",
     "validation-adapters": "^0.0.11",
