Update the API spec to lookup user by username instead of id (because mongo)

--- a/openapi/v1.yaml
+++ b/openapi/v1.yaml
@@ -83,18 +83,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
 
-  /users/{userId}:
+  /users/{username}:
     get:
-      summary: Get a user by ID
-      operationId: getUserById
+      summary: Get a user by username
+      operationId: getUserByUsername
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to retrieve
+          description: Username of the user to retrieve
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: A single user
@@ -105,13 +104,13 @@ paths:
         '404':
           description: User not found
     put:
-      summary: Update a user by ID
+      summary: Update a user by username
       operationId: updateUser
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to update
+          description: Username of the user to update
           schema:
             type: string
       requestBody:
@@ -131,13 +130,13 @@ paths:
         '404':
           description: User not found
     delete:
-      summary: Delete a user by ID
+      summary: Delete a user by username
       operationId: deleteUser
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: ID of the user to delete
+          description: Username of the user to delete
           schema:
             type: string
       responses:
