--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,8 @@
-APP_PORT=
-MONGO_URI=
-MONGO_DB_NAME=
+APP_PORT=""
+AUTH0_AUDIENCE=""
+AUTH0_ISSUER=""
+MONGO_DB_NAME=""
+MONGO_USERNAME=""
+MONGO_PASSWORD=""
+MONGO_HOST=""
+MONGO_PORT=""
