--- a/openapi/v1.yaml
+++ b/openapi/v1.yaml
@@ -10,6 +10,8 @@ paths:
     get:
       summary: Get API information
       operationId: getApiInfo
+      tags:
+        - Info
       responses:
         '200':
           description: API information
@@ -56,6 +58,8 @@ paths:
     get:
       summary: Get all users
       operationId: getUsers
+      tags:
+        - Users
       responses:
         '200':
           description: A list of users
@@ -68,6 +72,8 @@ paths:
     post:
       summary: Create a new user
       operationId: createUser
+      tags:
+        - Users
       requestBody:
         description: User object to create
         required: true
@@ -87,6 +93,8 @@ paths:
     get:
       summary: Get a user by username
       operationId: getUserByUsername
+      tags:
+        - Users
       parameters:
         - name: username
           in: path
@@ -106,6 +114,8 @@ paths:
     put:
       summary: Update a user by username
       operationId: updateUser
+      tags:
+        - Users
       parameters:
         - name: username
           in: path
@@ -132,6 +142,8 @@ paths:
     delete:
       summary: Delete a user by username
       operationId: deleteUser
+      tags:
+        - Users
       parameters:
         - name: username
           in: path
