--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "openapi:generate": "npx openapi-typescript ./openapi/v1.yaml -o ./src/generated/v1.ts",
     "dev": "ts-node ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "author": "Bryan Borgeson",
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.6.1",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
+    "jest": "^29.7.0",
     "openapi-typescript": "^7.4.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
