Add remaining tests

--- a/openapi/v1.yaml
+++ b/openapi/v1.yaml
@@ -88,6 +88,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 'Invalid input data. Missing required fields.'
 
   /users/{username}:
     get:
